--- a/styles/sass/partials/_skills.scss
+++ b/styles/sass/partials/_skills.scss
@@ -38,6 +38,7 @@
       transition: 0.5s ease-out;
       &:hover {
         color: $primary-color;
+        transform: $scale;
       }
     }
     .fa-terminal {
