--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -3,3 +3,8 @@ $primary-color: #b181b1;
 $header-text: #1d2032;
 $light-grey: #ebebee;
 $dark-grey: #797979;
+
+$heading-font: 'Sen', sans-serif;
+$body-font: 'Open Sans', sans-serif;
+
+$scale: scale(1.35);
