--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: $body-font;
   line-height: 1.75;
   font-size: 0.8rem;
   margin: 0;
@@ -36,13 +36,17 @@ li {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* header styles */
 h1,
 h2, 
 h3, 
 h4, 
 h5 {
-  font-family: 'Sen', sans-serif;
+  font-family: $heading-font;
   font-weight: 700;
   text-transform: capitalize;
   color: $header-text;
