--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,8 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
@@ -12,7 +13,12 @@ body {
   margin: 0;
 }
 
-article, aside, footer, header, nav, section {
+article,
+aside,
+footer,
+header,
+nav,
+section {
   display: block;
 }
 
@@ -21,7 +27,9 @@ h1 {
   margin: 0.67em 0;
 }
 
-figcaption, figure, main {
+figcaption,
+figure,
+main {
   display: block;
 }
 
@@ -53,15 +61,19 @@ abbr[title] {
           text-decoration: underline dotted;
 }
 
-b, strong {
+b,
+strong {
   font-weight: inherit;
 }
 
-b, strong {
+b,
+strong {
   font-weight: bolder;
 }
 
-code, kbd, samp {
+code,
+kbd,
+samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
@@ -79,7 +91,8 @@ small {
   font-size: 80%;
 }
 
-sub, sup {
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -94,7 +107,8 @@ sup {
   top: -0.5em;
 }
 
-audio, video {
+audio,
+video {
   display: inline-block;
 }
 
@@ -111,31 +125,46 @@ svg:not(:root) {
   overflow: hidden;
 }
 
-button, input, optgroup, select, textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
   font-family: sans-serif;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
 }
 
-button, input {
+button,
+input {
   overflow: visible;
 }
 
-button, select {
+button,
+select {
   text-transform: none;
 }
 
-button, html [type=button], [type=reset], [type=submit] {
+button,
+html [type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
 }
 
-button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
 
-button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -162,13 +191,15 @@ textarea {
   overflow: auto;
 }
 
-[type=checkbox], [type=radio] {
+[type=checkbox],
+[type=radio] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 0;
 }
 
-[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -177,7 +208,8 @@ textarea {
   outline-offset: -2px;
 }
 
-[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
+[type=search]::-webkit-search-cancel-button,
+[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -186,7 +218,8 @@ textarea {
   font: inherit;
 }
 
-details, menu {
+details,
+menu {
   display: block;
 }
 
@@ -211,7 +244,9 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
 }
@@ -261,7 +296,7 @@ header {
   color: #b181b1;
 }
 
-.arrow-nav {
+.scrolldown {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -270,10 +305,14 @@ header {
           justify-content: center;
   position: absolute;
   left: 45%;
+  bottom: 30px;
 }
-.arrow-nav i {
+.scrolldown i {
   color: #b181b1;
-  font-size: 1.7rem;
+  font-size: 1.35rem;
+}
+.scrolldown i:hover, .scrolldown i:focus {
+  color: #7e4e7e;
 }
 
 nav {
@@ -290,7 +329,6 @@ nav {
 }
 nav .logo {
   font-family: "Sen", sans-serif;
-  text-decoration: none;
   color: #2f2f2f;
   font-size: 1.25rem;
   font-weight: 600;
@@ -316,11 +354,33 @@ nav button {
   margin-left: 50px;
 }
 .top-nav li a {
-  text-decoration: none;
   color: #2f2f2f;
+  position: relative;
 }
-.top-nav li a:hover {
-  color: #b181b1;
+.top-nav li a::after {
+  content: "";
+  opacity: 1;
+  position: absolute;
+  top: 25px;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  background-color: #b181b1;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s, -webkit-transform 0.3s;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transform-origin: center;
+          transform-origin: center;
+}
+.top-nav li a:hover::after, .top-nav li a:focus::after {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+.top-nav li a:hover, .top-nav li a:focus {
+  color: #7e4e7e;
 }
 
 @media (max-width: 768px) {
@@ -344,7 +404,6 @@ nav button {
     background-color: #9e629e;
     height: 100vh;
     width: 100%;
-    z-index: 10;
   }
   .top-nav li {
     margin: 20px 0;
@@ -354,6 +413,10 @@ nav button {
     color: white;
     text-align: center;
     margin: 0;
+  }
+
+  .top-nav.expand {
+    z-index: 10;
   }
 
   #nav-icon {
@@ -437,7 +500,6 @@ nav button {
   padding: 30px;
 }
 .about-container .image-container img {
-  width: 100%;
   width: 300px;
   height: 350px;
   border-radius: 10px;
@@ -514,6 +576,8 @@ nav button {
 }
 .skills-icons li i:hover {
   color: #b181b1;
+  -webkit-transform: scale(1.35);
+          transform: scale(1.35);
 }
 .skills-icons li .fa-terminal {
   padding: 8.5px;
@@ -561,40 +625,19 @@ nav button {
 .project-card p {
   margin-top: 15px;
 }
-.project-card ul {
+.project-card .work-links {
   margin: 0;
   margin-bottom: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-.project-card ul li {
-  color: #545454;
-  border-radius: 10px;
-  margin-right: 10px;
-  line-height: 1.5;
-}
-.project-card ul i {
-  color: #464646;
-  font-size: 1.4rem;
-  padding: 0;
-  -webkit-transition: color 0.25s ease-in-out;
-  transition: color 0.25s ease-in-out;
-}
-.project-card ul i:hover {
-  color: #6c6c6c;
 }
 .project-card .work-links li {
-  margin: 20px 0;
-  margin-right: 12px;
-  padding: 0px;
+  margin: 20px 12px 20px 0;
 }
 .project-card .work-links li a {
   text-transform: uppercase;
   font-size: 0.85rem;
-  text-decoration: none;
   padding: 8px 20px;
   border-radius: 5px;
   color: #4f314f;
@@ -602,8 +645,8 @@ nav button {
   -webkit-transition: 0.2s background-color ease-in;
   transition: 0.2s background-color ease-in;
 }
-.project-card .work-links li a:hover {
-  background-color: #b181b1;
+.project-card .work-links li a:hover, .project-card .work-links li a:focus {
+  background-color: #9e629e;
   color: white;
 }
 
@@ -653,7 +696,6 @@ nav button {
 
 .email a {
   color: inherit;
-  text-decoration: none;
   position: relative;
 }
 .email a::after {
@@ -674,7 +716,7 @@ nav button {
   -webkit-transform-origin: center;
           transform-origin: center;
 }
-.email a:hover::after {
+.email a:hover::after, .email a:focus::after {
   -webkit-transform: scale(1);
           transform: scale(1);
 }
@@ -688,16 +730,20 @@ nav button {
 .socials li {
   margin-right: 30px;
 }
-.socials a {
+.socials li i {
   font-size: 1.3rem;
   color: #202020;
   -webkit-transition: 0.5s ease-out;
   transition: 0.5s ease-out;
+  padding: 15px;
 }
-.socials a:hover {
+.socials li i:first-of-type {
+  padding-left: 0;
+}
+.socials li i:hover {
   color: #b181b1;
-  -webkit-transform: scale(1.15);
-          transform: scale(1.15);
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
 }
 
 form {
@@ -718,12 +764,12 @@ form button {
   padding: 12px 30px;
   border-radius: 7px;
   color: #fff;
-  border-width: 0;
+  border: none;
   -webkit-transition: 0.3s background-color ease-in;
   transition: 0.3s background-color ease-in;
 }
-form button:hover {
-  background-color: #797979;
+form button:hover, form button:focus {
+  background-color: #7e4e7e;
 }
 form input {
   width: calc(50% - 8px);
@@ -777,6 +823,10 @@ ul {
 
 li {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 /* header styles */
