--- a/styles/sass/partials/_skills.scss
+++ b/styles/sass/partials/_skills.scss
@@ -41,25 +41,20 @@
         transform: $scale;
       }
     }
-    .fa-terminal {
-      padding: 8.5px;
-      font-size: 2.1rem;
-    }
+    // .fa-terminal {
+    //   font-size: 2.1rem;
+    // }
     
-    .fa-cog {
-      padding: 4.5px;
-    }
-    
-    .fa-mobile-alt {
-      font-size: 2.6rem;
-    }
+    // .fa-mobile-alt {
+    //   font-size: 2.6rem;
+    // }
 
-    .fa-cog {
-      font-size: 2.7rem;
-    }
+    // .fa-cog {
+    //   font-size: 2.7rem;
+    // }
     
-    .fa-universal-access {
-      font-size: 2.5rem;
-    }
+    // .fa-universal-access {
+    //   font-size: 2.5rem;
+    // }
   }
 }
