--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -42,7 +42,7 @@
     li {
       margin-right: 30px;
       i {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
         color: darken($dark-grey, 35%);
         transition: 0.5s ease-out;
         padding: 15px;
@@ -51,7 +51,7 @@
         }
         &:hover {
           color: $primary-color;
-          transform: translateY(-20px);
+          transform: translateY(-15px);
         }
       }
   }  
@@ -80,14 +80,15 @@ form {
   }
   textarea {
     width: 100%;
+    resize: none;
   }
   input, textarea {
     font-size: 0.9rem;
     font-family: $body-font;
     padding: 9px 15px;
-    border: none;
-    border-radius: 8px;
+    border-radius: 6px;
     margin-bottom: 20px;
+    border: none;
   }
 }
 
