--- a/styles/sass/partials/_navigation.scss
+++ b/styles/sass/partials/_navigation.scss
@@ -64,11 +64,11 @@ nav {
     position: absolute;
     opacity: 0;
     left: 0;
-    background-color: darken($primary-color, 10%);
+    background-color: $primary-color;
     height: 100vh;
     width: 100%;
     li {
-      margin: 20px 0;
+      margin: 10px 0;
       font-size: 1.2rem;
       a {
         color: white;
@@ -88,6 +88,8 @@ nav {
     width: 30px;
     height: 20px;
     position: relative;
+    bottom: 5px;
+    right: 10px;
     transform: rotate(0deg);
     transition: 0.5s ease-in-out;
     cursor: pointer;
@@ -128,7 +130,7 @@ nav {
       }
       &:nth-child(3) {
         transform: rotate(-45deg);
-        top: 25.5px;
+        top: 25px;
       }
     }
   }
