--- a/styles/sass/partials/_navigation.scss
+++ b/styles/sass/partials/_navigation.scss
@@ -54,6 +54,14 @@ nav {
 }
 
 @media (max-width: 768px) {
+  nav {
+    justify-content: flex-end;
+  }
+
+  .logo {
+    display: none;
+  }
+
   .top-nav {
     position: absolute;
     top: 0;
@@ -64,7 +72,7 @@ nav {
     position: absolute;
     opacity: 0;
     left: 0;
-    background-color: $primary-color;
+    background-color: darken($primary-color, 30%);
     height: 100vh;
     width: 100%;
     li {
@@ -85,7 +93,7 @@ nav {
   #nav-icon {
     z-index: 20;
     display: inline-block;
-    width: 30px;
+    width: 20px;
     height: 20px;
     position: relative;
     bottom: 5px;
@@ -96,22 +104,22 @@ nav {
     span {
       display: block;
       position: absolute;
-      height: 4.5px;
-      width: 100%;
+      height: 4px;
+      width: 90%;
       background-color: black;
       border-radius: 10px;
       transform: rotate(0deg);
       transition: 0.25s ease-in-out;
       &:nth-child(1) {
-        top: 0px;
+        top: 5px;
         transform-origin: left center;
       }
       &:nth-child(2) {
-        top: 11px;
+        top: 14px;
         transform-origin: left center;
       }
       &:nth-child(3) {
-        top: 22px;
+        top: 23px;
         transform-origin: left center;
       }
     }
@@ -122,7 +130,7 @@ nav {
       background-color: #fff;
       &:nth-child(1) {
         transform: rotate(45deg);
-        top: 4px;
+        top: 3.5px;
       }
       &:nth-child(2) {
         width: 0%;
@@ -130,7 +138,7 @@ nav {
       }
       &:nth-child(3) {
         transform: rotate(-45deg);
-        top: 25px;
+        top: 23px;
       }
     }
   }
