--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -4,7 +4,11 @@ $header-text: #1d2032;
 $light-grey: #ebebee;
 $dark-grey: #797979;
 
-$heading-font: 'Sen', sans-serif;
-$body-font: 'Open Sans', sans-serif;
+$primary-dark: #190d25;
+$purple-dark: #e3bbf7;
+$text-dark-mode: #f0eded;
+
+$heading-font: 'Rubik', sans-serif;
+$body-font: 'Mulish', sans-serif;
 
 $scale: scale(1.35);
