--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -1,6 +1,6 @@
 // section styling
 .about, .contact {
-  background-color: lighten($primary-color, 35%);
+  background-color: #f2edf2;
   position: relative;
 }
 
@@ -14,9 +14,8 @@
     .image-container {
         padding: 30px;
         img {
-          width: 300px;
-          height: 350px;
-          border-radius: 10px;
+          width: 250px;
+          height: 300px;
           object-position: top;
           object-fit: cover;
           box-shadow: 10px 10px $primary-color;
