--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,5 +1,6 @@
 @import "partials/setup";
 @import "partials/variables";
+@import "partials/darkmode";
 @import "partials/header";
 @import "partials/navigation";
 @import "partials/about";
@@ -15,8 +16,8 @@ html {
 
 body {
   font-family: $body-font;
-  line-height: 1.75;
-  font-size: 0.8rem;
+  line-height: 1.8;
+  font-size: 0.85rem;
   margin: 0;
   padding: 0;
 }
@@ -47,25 +48,15 @@ h3,
 h4, 
 h5 {
   font-family: $heading-font;
-  font-weight: 700;
+  font-weight: 500;
   text-transform: capitalize;
   color: $header-text;
+  margin: 0;
 }
 
 h2 {
   position: relative;
   display: inline-block;
-  &:after {
-    content: '';
-    position: absolute;
-    top: 28px;
-    left: 0;
-    background-color: lighten($primary-color, 25%);
-    border-radius: 8px;
-    width: 100%;
-    height: 15px;
-    z-index: -10;
-  }
 }
 
 h1 {
@@ -79,7 +70,8 @@ h2 {
 }
 
 h3 {
-  font-size: 1.45rem;
+  font-size: 1.3rem;
+  letter-spacing: 1px;
 }
 
 section {
