--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -1,6 +1,9 @@
 // section styling
 .contact {
-  padding-top: 40px;
+  padding-top: 0px;
+  h2 {
+    margin-bottom: 0px;
+  }
 }
 
 .contact-container {
@@ -17,23 +20,6 @@
 
 .email a {
   color: inherit;
-  position: relative;
-    &::after {
-      content: '';
-      opacity: 1;
-      position: absolute;
-      top: 25px;
-      left: 0;
-      height: 3px;
-      width: 100%;
-      background-color: $primary-color;
-      transition: opacity 0.3s, transform 0.3s;
-      transform: scale(0);
-      transform-origin: center;
-    }
-    &:hover::after, &:focus::after {
-      transform: scale(1);
-    }
 }
 
 .socials {
@@ -42,16 +28,10 @@
     li {
       margin-right: 30px;
       i {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         color: darken($dark-grey, 35%);
-        transition: 0.5s ease-out;
-        padding: 15px;
         &:first-of-type {
           padding-left: 0;
-        }
-        &:hover {
-          color: $primary-color;
-          transform: translateY(-15px);
         }
       }
   }  
@@ -65,30 +45,32 @@ form {
     button {
       width: 60%;
       font-size: 0.9rem;
-      background-color: $primary-color;
+      background-color: #000;
       padding: 12px 30px;
-      border-radius: 7px;
       color: #fff;
-      border: none;
-      transition: 0.3s background-color ease-in;
+      border: 1px solid black;
+      transition: 0.2s background-color ease-in;
       &:hover, &:focus {
-        background-color: darken($primary-color, 20%);
+        background-color: transparent;
+        color: #000;
       }
   }
   input {
     width: calc((100% / 2) - 8px);
   }
+
   textarea {
     width: 100%;
     resize: none;
   }
+
   input, textarea {
     font-size: 0.9rem;
     font-family: $body-font;
     padding: 9px 15px;
-    border-radius: 6px;
     margin-bottom: 20px;
     border: none;
+    border: 1px solid black;
   }
 }
 
