--- a/styles/sass/partials/_header-footer.scss
+++ b/styles/sass/partials/_header-footer.scss
@@ -3,7 +3,6 @@ header {
   height: 100vh;   
 }
 
-// styling for header info
 .header-info {
   height: 70vh;
   display: flex;
@@ -19,7 +18,6 @@ header {
     span {
       display: inline-block;
       width: 100%;
-      color: $primary-color;
     }
 }
 
@@ -31,22 +29,28 @@ header {
   bottom: 30px;
   animation: animate 0.9s infinite;
     i {
-      color: $primary-color;
+      color: #000;
       font-size: 1.5rem;
-      &:hover, &:focus {
-        color: darken($primary-color, 20%);
-      }
     }
 }
 
-@keyframes animate {
-  0% {
-    bottom: 4%;
-  }
-  50% {
-    bottom: 5%;
-  }
-  100% {
-    bottom: 4%;
-  }
+// @keyframes animate {
+//   0% {
+//     bottom: 4%;
+//   }
+//   50% {
+//     bottom: 5%;
+//   }
+//   100% {
+//     bottom: 4%;
+//   }
+// }
+
+footer {
+  padding: 2px 0;
+  text-align: center;
+    p {
+      width: 100%;
+      font-size: 0.8rem;
+    }
 }
