--- a/styles/sass/partials/_work.scss
+++ b/styles/sass/partials/_work.scss
@@ -5,12 +5,17 @@
 // flex parent
 .project-item {
   display: flex;
-  padding: 25px 0;
+  margin-bottom: 50px;
   .project-image {
     width: 50%;
     img {
       width: 100%;
+      height: 330px;
+      object-position: top;
+      object-fit: cover;
       border-radius: 4px;
+      box-shadow: 0px 13px 27px -5px rgba(50,50,93,0.25) , 0px 8px 16px -8px rgba(0,0,0,0.3) , 0px -6px 16px -6px rgba(0,0,0,0.025);
+      transition: 0.2s ease-in-out;
     }
   }
 }
@@ -19,13 +24,14 @@
   width: 50%;
   margin-left: 80px;
   h3 {
-    margin-bottom: 0px;
+    margin: 0px;
     display: inline-block;
   }
   p {
     margin-top: 5px;
   }
   .tools-used {
+    font-size: 1rem;
     margin: 10px 0;
     font-weight: 600;
   }
@@ -41,7 +47,7 @@
     }
     i {
       color: darken($dark-grey, 20%);
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       padding: 0;
       &:hover {
         color: $dark-grey;
@@ -58,14 +64,12 @@
         text-transform: uppercase;
         font-size: 0.85rem;
         padding: 8px 20px;
-        border-radius: 5px;
-        color: darken($primary-color, 35%);
-        background-color: lighten($primary-color, 22%);
+        color: black;
+        border: 1px solid grey;
         transition: 0.2s background-color ease-in;
         &:hover,
         &:focus {
-          background-color: darken($primary-color, 10%);
-          color: white;
+          color: black;
         }
       }
     }
