--- a/styles/style.css
+++ b/styles/style.css
@@ -239,6 +239,18 @@ template {
   display: none;
 }
 
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -265,202 +277,6 @@ html {
   overflow: hidden;
 }
 
-.dark-mode {
-  background: #190d25;
-  color: #f0eded;
-}
-.dark-mode .top-nav li a {
-  color: #f0eded;
-}
-.dark-mode .top-nav li a:hover {
-  color: #e3bbf7;
-}
-.dark-mode .header-info p {
-  color: #f0eded;
-}
-.dark-mode .logo {
-  color: #f0eded;
-}
-.dark-mode #nav-icon span {
-  background-color: #f0eded;
-}
-.dark-mode button#nav-icon {
-  background-color: transparent;
-}
-.dark-mode h1 {
-  color: #f0eded;
-}
-.dark-mode h1 span {
-  color: #e3bbf7;
-}
-.dark-mode h2, .dark-mode h3 {
-  color: #e3bbf7;
-}
-.dark-mode p {
-  color: #f0eded;
-  letter-spacing: 0.5px;
-}
-.dark-mode .arrow-nav i {
-  color: #e3bbf7;
-}
-.dark-mode .about, .dark-mode .contact {
-  background-color: #190d25;
-}
-.dark-mode .skills li {
-  color: #f0eded;
-}
-.dark-mode .skills li i {
-  color: #f0eded;
-  text-shadow: -6px 6px 3px rgba(79, 79, 79, 0.405);
-}
-.dark-mode .skills li i:hover {
-  color: #cdc3c3;
-}
-.dark-mode .work i, .dark-mode .contact i {
-  color: #f0eded;
-}
-.dark-mode .work-links li a:hover {
-  background-color: #190d25;
-}
-.dark-mode button {
-  background-color: #b98cd0;
-}
-.dark-mode footer {
-  color: #d9d1d1;
-}
-
-.dark-mode-toggle i {
-  font-size: 1rem;
-  position: absolute;
-  z-index: 1;
-  color: #fff;
-}
-.dark-mode-toggle .fa-sun {
-  color: #d08df2;
-  top: calc(8px + 3.1vh);
-  right: 115px;
-}
-.dark-mode-toggle .fa-moon {
-  font-size: 1rem;
-  top: calc(8px + 3.1vh);
-  right: 160px;
-}
-
-.toggleLabel::before {
-  content: "";
-  position: absolute;
-  width: 85px;
-  height: 38px;
-  border-radius: 20px;
-  background: #000;
-  top: 3vh;
-  right: 105px;
-  -webkit-transition: 0.1s background ease-in;
-  transition: 0.1s background ease-in;
-}
-
-.toggleLabel::after {
-  content: "";
-  position: absolute;
-  z-index: 2;
-  width: 28px;
-  height: 28px;
-  border-radius: 50%;
-  background: #fff;
-  top: calc(5px + 3vh);
-  right: 110px;
-  -webkit-transition: 0.1s right ease-in;
-  transition: 0.1s right ease-in;
-}
-
-input[type=checkbox] {
-  opacity: 0;
-}
-
-input[type=checkbox]:checked + .toggleLabel::before {
-  background: #dfdfdf;
-}
-
-input[type=checkbox]:checked + .toggleLabel::after {
-  -webkit-box-shadow: 5px black;
-          box-shadow: 5px black;
-  right: 155px;
-}
-
-header {
-  height: 100vh;
-}
-
-.header-info {
-  height: 70vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-.header-info h1, .header-info p {
-  margin: 8px 0;
-}
-.header-info p {
-  color: black;
-  font-size: 0.95rem;
-}
-.header-info span {
-  display: inline-block;
-  width: 100%;
-  color: #b181b1;
-}
-
-.scrolldown {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: absolute;
-  left: 45%;
-  bottom: 30px;
-  -webkit-animation: animate 0.9s infinite;
-          animation: animate 0.9s infinite;
-}
-.scrolldown i {
-  color: #b181b1;
-  font-size: 1.5rem;
-}
-.scrolldown i:hover, .scrolldown i:focus {
-  color: #7e4e7e;
-}
-
-@-webkit-keyframes animate {
-  0% {
-    bottom: 4%;
-  }
-  50% {
-    bottom: 5%;
-  }
-  100% {
-    bottom: 4%;
-  }
-}
-
-@keyframes animate {
-  0% {
-    bottom: 4%;
-  }
-  50% {
-    bottom: 5%;
-  }
-  100% {
-    bottom: 4%;
-  }
-}
 nav {
   height: 10vh;
   display: -webkit-box;
@@ -474,9 +290,9 @@ nav {
           align-items: center;
 }
 nav .logo {
-  font-family: "Rubik", sans-serif;
+  font-family: "League Spartan", sans-serif;
   color: #2f2f2f;
-  font-size: 1.1rem;
+  font-size: 1.4rem;
   font-weight: 600;
 }
 nav button {
@@ -562,7 +378,7 @@ nav button {
     width: 100%;
   }
   .top-nav li {
-    margin: 10px 0;
+    margin: 20px 0;
     font-size: 1.2rem;
   }
   .top-nav li a {
@@ -635,8 +451,63 @@ nav button {
     top: 23px;
   }
 }
+header {
+  height: 100vh;
+}
+
+.header-info {
+  height: 70vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.header-info h1, .header-info p {
+  margin: 8px 0;
+}
+.header-info p {
+  color: black;
+  font-size: 0.95rem;
+}
+.header-info span {
+  display: inline-block;
+  width: 100%;
+}
+
+.scrolldown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  left: 45%;
+  bottom: 30px;
+  -webkit-animation: animate 0.9s infinite;
+          animation: animate 0.9s infinite;
+}
+.scrolldown i {
+  color: #000;
+  font-size: 1.5rem;
+}
+
+footer {
+  padding: 2px 0;
+  text-align: center;
+}
+footer p {
+  width: 100%;
+  font-size: 0.8rem;
+}
+
 .about, .contact {
-  background-color: #f2edf2;
   position: relative;
 }
 
@@ -644,54 +515,52 @@ nav button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.about-container .summary {
+.about-container .about-text {
   width: 65%;
 }
-.about-container .image-container {
-  padding: 30px;
+.about-container .about-image {
+  width: 30%;
 }
-.about-container .image-container img {
-  width: 250px;
-  height: 300px;
+.about-container .about-image img {
+  height: 350px;
   -o-object-position: top;
      object-position: top;
   -o-object-fit: cover;
      object-fit: cover;
-  -webkit-box-shadow: 10px 10px #b181b1;
-          box-shadow: 10px 10px #b181b1;
+}
+.about-container .about-image img:hover {
+  -webkit-box-shadow: rgba(195, 46, 240, 0.4) 5px 5px, rgba(195, 46, 240, 0.3) 10px 10px;
+          box-shadow: rgba(195, 46, 240, 0.4) 5px 5px, rgba(195, 46, 240, 0.3) 10px 10px;
 }
 
 .skills {
-  padding-top: 60px;
-  padding-bottom: 40px;
-}
-.skills h2 {
-  margin-top: 15px;
-  margin-bottom: 50px;
+  padding: 0px 0px 40px 0px;
 }
 
 .skills-icons {
-  margin: 10px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 90%;
+  margin: 10px auto;
   row-gap: 50px;
+}
+.skills-icons span {
+  display: block;
 }
 .skills-icons div {
   height: 55px;
 }
 .skills-icons li {
-  width: 25%;
+  width: 20%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -717,15 +586,16 @@ nav button {
           transform: scale(1.2);
 }
 .skills-icons li i {
-  font-size: 2.2rem;
+  font-size: 2.4rem;
   color: #434343;
   -webkit-transition: 0.5s ease-out;
   transition: 0.5s ease-out;
 }
 .skills-icons li i:hover {
   color: #b181b1;
-  -webkit-transform: scale(1.35);
-          transform: scale(1.35);
+}
+.skills-icons li p {
+  margin-top: 15px;
 }
 
 .work {
@@ -736,14 +606,23 @@ nav button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 25px 0;
+  margin-bottom: 50px;
 }
 .project-item .project-image {
   width: 50%;
 }
 .project-item .project-image img {
   width: 100%;
+  height: 330px;
+  -o-object-position: top;
+     object-position: top;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 4px;
+  -webkit-box-shadow: 0px 13px 27px -5px rgba(50, 50, 93, 0.25), 0px 8px 16px -8px rgba(0, 0, 0, 0.3), 0px -6px 16px -6px rgba(0, 0, 0, 0.025);
+          box-shadow: 0px 13px 27px -5px rgba(50, 50, 93, 0.25), 0px 8px 16px -8px rgba(0, 0, 0, 0.3), 0px -6px 16px -6px rgba(0, 0, 0, 0.025);
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
 .project-card {
@@ -751,13 +630,14 @@ nav button {
   margin-left: 80px;
 }
 .project-card h3 {
-  margin-bottom: 0px;
+  margin: 0px;
   display: inline-block;
 }
 .project-card p {
   margin-top: 5px;
 }
 .project-card .tools-used {
+  font-size: 1rem;
   margin: 10px 0;
   font-weight: 600;
 }
@@ -777,7 +657,7 @@ nav button {
 }
 .project-card ul i {
   color: #464646;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   padding: 0;
 }
 .project-card ul i:hover {
@@ -797,15 +677,13 @@ nav button {
   text-transform: uppercase;
   font-size: 0.85rem;
   padding: 8px 20px;
-  border-radius: 5px;
-  color: #4f314f;
-  background-color: #dcc6dc;
+  color: black;
+  border: 1px solid grey;
   -webkit-transition: 0.2s background-color ease-in;
   transition: 0.2s background-color ease-in;
 }
 .project-card .work-links li a:hover, .project-card .work-links li a:focus {
-  background-color: #9e629e;
-  color: white;
+  color: black;
 }
 
 .project-item-alternate {
@@ -820,7 +698,10 @@ nav button {
 }
 
 .contact {
-  padding-top: 40px;
+  padding-top: 0px;
+}
+.contact h2 {
+  margin-bottom: 0px;
 }
 
 .contact-container {
@@ -839,29 +720,6 @@ nav button {
 
 .email a {
   color: inherit;
-  position: relative;
-}
-.email a::after {
-  content: "";
-  opacity: 1;
-  position: absolute;
-  top: 25px;
-  left: 0;
-  height: 3px;
-  width: 100%;
-  background-color: #b181b1;
-  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-  transition: opacity 0.3s, -webkit-transform 0.3s;
-  transition: opacity 0.3s, transform 0.3s;
-  transition: opacity 0.3s, transform 0.3s, -webkit-transform 0.3s;
-  -webkit-transform: scale(0);
-          transform: scale(0);
-  -webkit-transform-origin: center;
-          transform-origin: center;
-}
-.email a:hover::after, .email a:focus::after {
-  -webkit-transform: scale(1);
-          transform: scale(1);
 }
 
 .socials {
@@ -874,19 +732,11 @@ nav button {
   margin-right: 30px;
 }
 .socials li i {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   color: #202020;
-  -webkit-transition: 0.5s ease-out;
-  transition: 0.5s ease-out;
-  padding: 15px;
 }
 .socials li i:first-of-type {
   padding-left: 0;
-}
-.socials li i:hover {
-  color: #b181b1;
-  -webkit-transform: translateY(-15px);
-          transform: translateY(-15px);
 }
 
 form {
@@ -903,16 +753,16 @@ form {
 form button {
   width: 60%;
   font-size: 0.9rem;
-  background-color: #b181b1;
+  background-color: #000;
   padding: 12px 30px;
-  border-radius: 7px;
   color: #fff;
-  border: none;
-  -webkit-transition: 0.3s background-color ease-in;
-  transition: 0.3s background-color ease-in;
+  border: 1px solid black;
+  -webkit-transition: 0.2s background-color ease-in;
+  transition: 0.2s background-color ease-in;
 }
 form button:hover, form button:focus {
-  background-color: #7e4e7e;
+  background-color: transparent;
+  color: #000;
 }
 form input {
   width: calc(50% - 8px);
@@ -923,22 +773,11 @@ form textarea {
 }
 form input, form textarea {
   font-size: 0.9rem;
-  font-family: "Mulish", sans-serif;
+  font-family: "Inter", sans-serif;
   padding: 9px 15px;
-  border-radius: 6px;
   margin-bottom: 20px;
   border: none;
-}
-
-footer {
-  padding: 2px 0;
-  text-align: center;
-  background-color: #b181b1;
-}
-footer p {
-  color: white;
-  width: 100%;
-  font-size: 0.8rem;
+  border: 1px solid black;
 }
 
 html {
@@ -948,62 +787,49 @@ html {
 }
 
 body {
-  font-family: "Mulish", sans-serif;
+  font-family: "Inter", sans-serif;
   line-height: 1.8;
   font-size: 0.85rem;
-  margin: 0;
-  padding: 0;
 }
 
 .wrapper {
   margin: 0 auto;
-  width: 78%;
+  width: 85%;
   max-width: 1200px;
 }
 
-ul {
-  padding: 0;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-/* header styles */
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: "Rubik", sans-serif;
-  font-weight: 500;
+  font-family: "League Spartan", sans-serif;
+  font-weight: 600;
   text-transform: capitalize;
-  color: #1d2032;
-  margin: 0;
-}
-
-h2 {
-  position: relative;
-  display: inline-block;
+  margin-bottom: 0px;
 }
 
 h1 {
-  font-size: 1.7rem;
+  font-size: 2.6rem;
   line-height: 1.5;
 }
 
 h2 {
-  font-size: 1.45rem;
-  letter-spacing: 0.5px;
+  font-size: 1.7rem;
 }
 
 h3 {
-  font-size: 1.3rem;
-  letter-spacing: 1px;
+  font-size: 1.5rem;
+}
+
+h2 ~ p {
+  margin-bottom: 30px;
+}
+
+p {
+  font-size: 0.88rem;
+  line-height: 1.8;
+  margin: 0px 0px 15px 0px;
 }
 
 section {
@@ -1029,8 +855,16 @@ section {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .about-container .summary, .about-container img {
+  .about-container .about-text, .about-container .about-image {
     width: 100%;
+  }
+  .about-container .about-image {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 
   h2, .tools-used {
