--- a/styles/style.css
+++ b/styles/style.css
@@ -454,9 +454,36 @@ nav button {
 header {
   height: 100vh;
 }
+header div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header-info-wrapper {
+  height: 80vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 
 .header-info {
-  height: 70vh;
+  -ms-flex-item-align: center;
+      align-self: center;
+  border: 2px solid #000;
+  padding: 60px;
+  width: 60%;
+  height: 35vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -599,7 +626,7 @@ footer p {
 }
 
 .work {
-  padding: 30px 0;
+  padding: 10px 0;
 }
 
 .project-item {
@@ -613,7 +640,7 @@ footer p {
 }
 .project-item .project-image img {
   width: 100%;
-  height: 330px;
+  height: 280px;
   -o-object-position: top;
      object-position: top;
   -o-object-fit: cover;
@@ -637,7 +664,7 @@ footer p {
   margin-top: 5px;
 }
 .project-card .tools-used {
-  font-size: 1rem;
+  font-size: 0.8rem;
   margin: 10px 0;
   font-weight: 600;
 }
@@ -794,7 +821,7 @@ body {
 
 .wrapper {
   margin: 0 auto;
-  width: 85%;
+  width: 80%;
   max-width: 1200px;
 }
 
@@ -810,16 +837,16 @@ h5 {
 }
 
 h1 {
-  font-size: 2.6rem;
+  font-size: 2.3rem;
   line-height: 1.5;
 }
 
 h2 {
-  font-size: 1.7rem;
+  font-size: 1.6rem;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 h2 ~ p {
@@ -827,7 +854,7 @@ h2 ~ p {
 }
 
 p {
-  font-size: 0.88rem;
+  font-size: 0.8rem;
   line-height: 1.8;
   margin: 0px 0px 15px 0px;
 }
