--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -1,6 +1,7 @@
 // section styling
 .about, .contact {
   position: relative;
+  background-color: #f2f2f2;
 }
 
 .about-container {
@@ -8,19 +9,21 @@
   align-content: flex-start;
   justify-content: space-between;
   .about-text {
-      width: 65%;
+    width: 65%;
+    h2 {
+      margin: 0px;
+    }
   }
   .about-image {
-      width: 30%;
-      img {
-        height: 350px;
-        object-position: top;
-        object-fit: cover;
-        &:hover {
-          box-shadow: 
-          rgba(195, 46, 240, 0.4) 5px 5px, 
-          rgba(195, 46, 240, 0.3) 10px 10px
-      }
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    img {
+      width: 100%;
+      border-radius: 50%;
+      object-position: top;
+      object-fit: cover;
+    }
   }
-}
 }
