--- a/styles/sass/partials/_work.scss
+++ b/styles/sass/partials/_work.scss
@@ -6,6 +6,9 @@
 .project-item {
   display: flex;
   margin-bottom: 50px;
+  .sub-text {
+    margin: 0px;
+  }  
   .project-image {
     width: 50%;
     img {
@@ -22,7 +25,7 @@
 
 .project-card {
   width: 50%;
-  margin-left: 80px;
+  margin-left: 60px;
   h3 {
     margin: 0px;
     display: inline-block;
@@ -30,18 +33,16 @@
   p {
     margin-top: 5px;
   }
-  .tools-used {
-    font-size: 0.8rem;
-    margin: 10px 0;
-    font-weight: 600;
-  }
   ul {
     margin: 0;
     display: flex;
     flex-wrap: wrap;
+    li:first-of-type {
+      padding-left: 4px;
+    }
     li {
       font-size: 0.9rem;
-      padding: 5px;
+      padding-right: 4px;
       border-radius: 10px;
       margin-right: 10px;
     }
@@ -69,7 +70,8 @@
         transition: 0.2s background-color ease-in;
         &:hover,
         &:focus {
-          color: black;
+          color: white;
+          background-color: #545454;
         }
       }
     }
