--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -3,8 +3,8 @@ $primary-color: #b181b1;
 $header-text: #1d2032;
 $light-grey: #ebebee;
 $dark-grey: #797979;
-$heading-font: 'League Spartan', sans-serif;
-$body-font: 'Inter', sans-serif;
+$heading-font: 'Work Sans', sans-serif;
+$body-font: 'Mulish', sans-serif;
 
 @import "partials/setup";
 @import "partials/navigation";
@@ -32,43 +32,51 @@ body {
   max-width: 1200px;
 }
 
+// .sub-text {
+//   font-family: 'Anaheim', sans-serif;;
+// }
+
 h1,
 h2, 
 h3, 
 h4, 
 h5 {
   font-family: $heading-font;
-  font-weight: 600;
+  font-weight: 700;
   text-transform: capitalize;
   margin-bottom: 0px;
 }
 
 h1 {
-  font-size: 2.3rem;
+  font-size: 2.2rem;
   line-height: 1.5;
 }
 
 h2 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
 }
 
 h3 {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
 
-h2 ~ p {
-    margin-bottom: 30px;
+h2 + p {
+  margin-top: 0;
 }
 
 p {
+  color: #242424;
   font-size: 0.8rem;
-  line-height: 1.8;
-  margin: 0px 0px 15px 0px;
+  line-height: 1.9;
 }
 
 section {
   padding: 80px 0;
 }
+
+// .wrapper {
+//   border: 1px solid blue;
+// }
 
 /* media queries */
 @import "partials/media-queries";
