--- a/styles/sass/partials/_header-footer.scss
+++ b/styles/sass/partials/_header-footer.scss
@@ -1,6 +1,7 @@
 // header partial
 header {
   height: 100vh;
+  // background-color: #e2e8e2;
   div{
     display: flex;
     flex-direction: column;
@@ -16,24 +17,31 @@ header {
 
 .header-info {
   align-self: center;
-  border: 2px solid #000;
-  padding: 60px;
-  width: 60%;
-  height: 35vh;
+  // text-align: center;
+  // border: 2px solid #707070;
+  background-color: white;
+  // padding: 120px;
+  width: 100%;
+  height: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-    h1, p {
-      margin: 8px 0;
+  // border-left: 2px solid black;
+    h1 {
+    padding-bottom: 15px;
     }
-    p {
-      color: black;
-      font-size: 0.95rem;
+    h1, p {
+      margin: 0px;
     }
     span {
+      color: $primary-color;
       display: inline-block;
       width: 100%;
     }
+}
+
+.header-img {
+  width: 20%;
 }
 
 .scrolldown {
