--- a/styles/style.css
+++ b/styles/style.css
@@ -327,7 +327,7 @@ nav button {
   left: 0;
   height: 3px;
   width: 100%;
-  background-color: #b181b1;
+  background-color: #af83b6;
   -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
   transition: opacity 0.3s, -webkit-transform 0.3s;
   transition: opacity 0.3s, transform 0.3s;
@@ -342,7 +342,7 @@ nav button {
           transform: scale(1);
 }
 .top-nav li a:hover, .top-nav li a:focus {
-  color: #7e4e7e;
+  color: #7d4e85;
 }
 
 @media (max-width: 768px) {
@@ -372,7 +372,7 @@ nav button {
     position: absolute;
     opacity: 0;
     left: 0;
-    background-color: #5f3b5f;
+    background-color: #5f3b65;
     height: 100vh;
     width: 100%;
   }
@@ -479,10 +479,9 @@ header div {
 .header-info {
   -ms-flex-item-align: center;
       align-self: center;
-  border: 2px solid #000;
-  padding: 60px;
-  width: 60%;
-  height: 35vh;
+  background-color: white;
+  width: 100%;
+  height: 120px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -494,16 +493,20 @@ header div {
       -ms-flex-pack: center;
           justify-content: center;
 }
-.header-info h1, .header-info p {
-  margin: 8px 0;
+.header-info h1 {
+  padding-bottom: 15px;
 }
-.header-info p {
-  color: black;
-  font-size: 0.95rem;
+.header-info h1, .header-info p {
+  margin: 0px;
 }
 .header-info span {
+  color: #af83b6;
   display: inline-block;
   width: 100%;
+}
+
+.header-img {
+  width: 20%;
 }
 
 .scrolldown {
@@ -655,7 +658,7 @@ footer p {
   transition: 0.5s ease-out;
 }
 .skills-icons li i:hover {
-  color: #b181b1;
+  color: #af83b6;
 }
 .skills-icons li p {
   margin-top: 15px;
@@ -663,6 +666,9 @@ footer p {
 
 .work {
   padding: 10px 0;
+}
+.work h2 {
+  margin-bottom: 20px;
 }
 
 .project-item {
@@ -863,13 +869,13 @@ h3,
 h4,
 h5 {
   font-family: "Work Sans", sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   text-transform: capitalize;
   margin-bottom: 0px;
 }
 
 h1 {
-  font-size: 2.2rem;
+  font-size: 1.8rem;
   line-height: 1.5;
 }
 
@@ -882,7 +888,7 @@ h3 {
 }
 
 h2 + p {
-  margin-top: 0;
+  margin: 10px 0;
 }
 
 p {
